// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/guide/metadata/simple-component.md inline validation: basic-metadata 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 4,
        "context": {
          "child": "<my-component>",
          "kind": "content",
          "parent": "<div>",
        },
        "line": 2,
        "message": "<my-component> element is not permitted as content under <div>",
        "offset": 9,
        "ruleId": "element-permitted-content",
        "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
        "selector": "div > my-component",
        "severity": 2,
        "size": 12,
      },
    ],
    "source": "<div>
  <my-component>lorem ipsum</my-component>
</div>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/simple-component.md inline validation: flow--metadata-2 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 4,
        "context": {
          "child": "<my-component>",
          "kind": "content",
          "parent": "<span>",
        },
        "line": 2,
        "message": "<my-component> element is not permitted as content under <span>",
        "offset": 10,
        "ruleId": "element-permitted-content",
        "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
        "selector": "span > my-component",
        "severity": 2,
        "size": 12,
      },
    ],
    "source": "<span>
  <my-component>lorem ipsum</my-component>
</span>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/simple-component.md inline validation: flow-metadata-1 1`] = `[]`;

exports[`docs/guide/metadata/simple-component.md inline validation: no-metadata-1 1`] = `[]`;

exports[`docs/guide/metadata/simple-component.md inline validation: no-metadata-2 1`] = `[]`;

exports[`docs/guide/metadata/simple-component.md inline validation: no-metadata-3 1`] = `[]`;

exports[`docs/guide/metadata/simple-component.md inline validation: phrasing-metadata 1`] = `[]`;
